Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.15.2, 5.15.5
-
b2e4f09bfa2c42af562f6741c0a0246a53028f0a (qt/qtdeclarative/dev) 87cbf885a9ecb8302c0285882c4724f4c5a20bcf (qt/qtdeclarative/6.1) 86a477e72be6a71f50213e5ac2841eba0b4e78b4 (qt/qtdeclarative/6.2) 3c896d3a3c (qt/tqtc-qtdeclarative/5.15-opensource)
Description
Since 5.15.2 swiping / dragging a ListView to scroll doesn't seem to work if the ListView is given a header with double digit height. The same code would work flawlessly with 5.15.1.
Steps to reproduce the issue:
- run the attached project
- Try to drag the listview to scroll it
Note: scrolling with mouse wheel works as expected.
Attachments
Issue Links
- is duplicated by
-
QTBUG-94083 [Regression] ListView isn't draggable with ListView.OverlayHeader
-
- Reported
-
-
QTBUG-101727 Adding header on ListView prevents scrolling on mobile when the delegate has MouseArea
-
- Closed
-
-
QTBUG-95559 ListView can't flick with ListView.OverlayHeader and ListView.PullBackHeader
-
- Closed
-