tests/auto/quick/qquicklistview/tst_qquicklistview.cpp
@@ -299,6 +299,8 @@ private slots:
     void requiredObjectListModel();
     void clickHeaderAndFooterWhenClip();
     void animatedDelegate();
+    void dragDelegateWithMouseArea();
+    void dragDelegateWithMouseArea_data();
 
 private:
     template <class T> void items(const QUrl &source);
@@ -10106,6 +10108,95 @@ void tst_QQuickListView::animatedDelegate()
     for (int i = 0; i < 100; ++i) {
         QMetaObject::invokeMethod(window->rootObject(), "refreshModel");
         QTest::qWait(10);
+    }
+}
+
+static void dragListView(QWindow *window, QPoint *startPos, const QPoint &delta)
+{
+    auto drag_helper = [&](QWindow *window, QPoint *startPos, const QPoint &d) {
+        QPoint pos = *startPos;
+        const int dragDistance = d.manhattanLength();
+        const QPoint unitVector(qBound(-1, d.x(), 1), qBound(-1, d.y(), 1));
+        for (int i = 0; i < dragDistance; ++i) {
+            QTest::mouseMove(window, pos);
+            pos += unitVector;
+        }
+        // Move to the final position
+        pos = *startPos + d;
+        QTest::mouseMove(window, pos);
+        *startPos = pos;
+    };
+
+    if (delta.manhattanLength() == 0)
+        return;
+    const int dragThreshold = QGuiApplication::styleHints()->startDragDistance();
+    const QPoint unitVector(qBound(-1, delta.x(), 1), qBound(-1, delta.y(), 1));
+    // go just beyond the drag theshold
+    drag_helper(window, startPos, unitVector * (dragThreshold + 1));
+    drag_helper(window, startPos, unitVector);
+
+    // next drag will actually scroll the listview
+    drag_helper(window, startPos, delta);
+}
+
+void tst_QQuickListView::dragDelegateWithMouseArea()
+{
+    QFETCH(QQuickItemView::LayoutDirection, layoutDirection);
+
+    QScopedPointer<QQuickView> window(createView());
+    QVERIFY(window);
+    window->setSource(testFileUrl("delegateWithMouseArea2.qml"));
+    window->show();
+    QVERIFY(QTest::qWaitForWindowExposed(window.data()));
+
+    QQuickListView *listview = findItem<QQuickListView>(window->rootObject(), "list");
+    QVERIFY(listview != nullptr);
+
+    const bool horizontal = layoutDirection < QQuickItemView::VerticalTopToBottom;
+    listview->setOrientation(horizontal ? QQuickListView::Horizontal : QQuickListView::Vertical);
+
+    if (horizontal)
+        listview->setLayoutDirection(static_cast<Qt::LayoutDirection>(layoutDirection));
+    else
+        listview->setVerticalLayoutDirection(static_cast<QQuickItemView::VerticalLayoutDirection>(layoutDirection));
+
+    QVERIFY(QQuickTest::qWaitForItemPolished(listview));
+
+    auto contentPosition = [&](QQuickListView *listview) {
+        return (listview->orientation() == QQuickListView::Horizontal ? listview->contentX(): listview->contentY());
+    };
+
+    qreal expectedContentPosition = contentPosition(listview);
+    QPoint startPos = (QPointF(listview->width(), listview->height())/2).toPoint();
+    QTest::mousePress(window.data(), Qt::LeftButton, Qt::NoModifier, startPos, 200);
+
+    QPoint dragDelta(0, -10);
+
+    if (layoutDirection == QQuickItemView::RightToLeft || layoutDirection == QQuickItemView::VerticalBottomToTop)
+        dragDelta = -dragDelta;
+    expectedContentPosition -= dragDelta.y();
+    if (horizontal)
+        dragDelta = dragDelta.transposed();
+
+    dragListView(window.data(), &startPos, dragDelta);
+
+    QTest::mouseRelease(window.data(), Qt::LeftButton, Qt::NoModifier, startPos, 200);     // Wait 200 ms before we release to avoid trigger a flick
+
+    // wait for the "fixup" animation to finish
+    QVERIFY(QTest::qWaitFor([&]()
+        { return !listview->isMoving();}
+    ));
+
+    QCOMPARE(contentPosition(listview), expectedContentPosition);
+}
+
+void tst_QQuickListView::dragDelegateWithMouseArea_data()
+{
+    QTest::addColumn<QQuickItemView::LayoutDirection>("layoutDirection");
+
+    for (int layDir = QQuickItemView::LeftToRight; layDir <= (int)QQuickItemView::VerticalBottomToTop; layDir++) {
+        const char *enumValueName = QMetaEnum::fromType<QQuickItemView::LayoutDirection>().valueToKey(layDir);
+        QTest::newRow(enumValueName) << static_cast<QQuickItemView::LayoutDirection>(layDir);
     }
 }
 
